# power

exp/: CMakeLists.txt
exp/adder/: CMakeLists.txt
exp/adder/gate/: CMakeLists.txt  dump_waveform.cmds
exp/adder/power/: CMakeLists.txt  pt_script.tcl
exp/adder/synth/: .synopsys_dc.setup  CMakeLists.txt  syn.tcl
exp/adder/verilog/: CMakeLists.txt  adder.v  ivector.txt  random_vector.py  test_add.v
exp/dct/: CMakeLists.txt
exp/dct/c_src/: CMakeLists.txt  audi_golden.h  audi_testvector.h  golden.h  lena_golden.h  lena_testvector.h  roki_golden.h  roki_testvector.h  test_dct.cpp  testvector.h
exp/dct/cdata/: CMakeLists.txt
exp/dct/pwr/: CMakeLists.txt
exp/gemm/: CMakeLists.txt
exp/gemm/c_src/: CMakeLists.txt  matrixmul.cpp  matrixmul.h  matrixmul_test_300.cpp  matrixmul_test_3000.cpp
exp/gemm/cdata/: CMakeLists.txt
exp/gemm/pwr/: 300_pipe_fsm_data  CMakeLists.txt
exp/hdr/: CMakeLists.txt
exp/hdr/c_src/: CMakeLists.txt  computeWeight.cpp  test.cpp
exp/hdr/cdata/: CMakeLists.txt  test_o.cpp
exp/hdr/pwr/: CMakeLists.txt  small_church_pipe_fsm_data  small_house_pipe_fsm_data
